tests/syntax/incorrect_syntax/many_outputs.stderr
error: prefix `aren` is unknown
 --> tests/syntax/incorrect_syntax/many_outputs.stderr:1:25
  |
1 | error: multiple OUTPUTs aren't allowed
  |                         ^^^^ unknown prefix
  |
  = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
  |
1 | error: multiple OUTPUTs aren 't allowed
  |                             +

error: expected one of `!` or `::`, found `:`
 --> tests/syntax/incorrect_syntax/many_outputs.stderr:1:6
  |
1 | error: multiple OUTPUTs aren't allowed
  |      ^ expected one of `!` or `::`
